2018.8/_sources/plugins/available/feature-classifier/fit-classifier-naive-bayes.txt
fit-classifier-naive-bayes: Train the naive_bayes classifier
============================================================


.. raw:: html

   <table class="table action-info">
     <tbody>
       <tr>
         <th scope="row"><p></p>Citations</th>
         <td>

.. bibliography:: feature-classifier:fit-classifier-naive-bayes.bib
   :all:
   :keyprefix: feature-classifier:fit-classifier-naive-bayes:
   :labelprefix: feature-classifier:fit-classifier-naive-bayes:

.. raw:: html

         </td>
       </tr>
     </tbody>
   </table>


.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <h4>Docstring:</h4>
         <pre>Usage: qiime feature-classifier fit-classifier-naive-bayes 
              [OPTIONS]

     Create a scikit-learn naive_bayes classifier for reads

   Options:
     --i-reference-reads ARTIFACT PATH FeatureData[Sequence]
                                     [required]
     --i-reference-taxonomy ARTIFACT PATH FeatureData[Taxonomy]
                                     [required]
     --i-class-weight ARTIFACT PATH FeatureTable[RelativeFrequency]
                                     [optional]
     --p-classify--alpha FLOAT       [default: 0.001]
     --p-classify--chunk-size INTEGER
                                     [default: 20000]
     --p-classify--class-prior TEXT  [default: null]
     --p-classify--fit-prior / --p-no-classify--fit-prior
                                     [default: False]
     --p-feat-ext--alternate-sign / --p-no-feat-ext--alternate-sign
                                     [default: False]
     --p-feat-ext--analyzer TEXT     [default: char_wb]
     --p-feat-ext--binary / --p-no-feat-ext--binary
                                     [default: False]
     --p-feat-ext--decode-error TEXT
                                     [default: strict]
     --p-feat-ext--encoding TEXT     [default: utf-8]
     --p-feat-ext--input TEXT        [default: content]
     --p-feat-ext--lowercase / --p-no-feat-ext--lowercase
                                     [default: True]
     --p-feat-ext--n-features INTEGER
                                     [default: 8192]
     --p-feat-ext--ngram-range TEXT  [default: [7, 7]]
     --p-feat-ext--non-negative / --p-no-feat-ext--non-negative
                                     [default: False]
     --p-feat-ext--norm TEXT         [default: l2]
     --p-feat-ext--preprocessor TEXT
                                     [default: null]
     --p-feat-ext--stop-words TEXT   [default: null]
     --p-feat-ext--strip-accents TEXT
                                     [default: null]
     --p-feat-ext--token-pattern TEXT
                                     [default: (?u)\b\w\w+\b]
     --p-feat-ext--tokenizer TEXT    [default: null]
     --o-classifier ARTIFACT PATH TaxonomicClassifier
                                     [required if not passing --output-dir]
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --citations                     Show citations and exit.
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
       <h4>Import:</h4>

.. command-block::
   :no-exec:

   from qiime2.plugins.feature_classifier.methods import fit_classifier_naive_bayes

.. raw:: html

       <h4>Docstring:</h4>
         <pre>Train the naive_bayes classifier

   Create a scikit-learn naive_bayes classifier for reads

   Parameters
   ----------
   reference_reads : FeatureData[Sequence]
   reference_taxonomy : FeatureData[Taxonomy]
   class_weight : FeatureTable[RelativeFrequency], optional
   classify__alpha : Float, optional
   classify__chunk_size : Int, optional
   classify__class_prior : Str, optional
   classify__fit_prior : Bool, optional
   feat_ext__alternate_sign : Bool, optional
   feat_ext__analyzer : Str, optional
   feat_ext__binary : Bool, optional
   feat_ext__decode_error : Str, optional
   feat_ext__encoding : Str, optional
   feat_ext__input : Str, optional
   feat_ext__lowercase : Bool, optional
   feat_ext__n_features : Int, optional
   feat_ext__ngram_range : Str, optional
   feat_ext__non_negative : Bool, optional
   feat_ext__norm : Str, optional
   feat_ext__preprocessor : Str, optional
   feat_ext__stop_words : Str, optional
   feat_ext__strip_accents : Str, optional
   feat_ext__token_pattern : Str, optional
   feat_ext__tokenizer : Str, optional

   Returns
   -------
   classifier : TaxonomicClassifier</pre>
       </div>
     </div>
   </div>